# champyons

./: .gitignore  foo.db  main.py  pyproject.toml  tree.py
champyons/adapters/geonames/: __init__.py  dto.py  geonames.py  geonames_api_client.py
champyons/adapters/localization/: __init__.py  cache.py  localization_service.py
champyons/adapters/persistence/sqlalchemy/: engine.py
champyons/adapters/timezone/: api.py  context.py
champyons/core/: config.py
champyons/core/application/context/: localization_context.py
champyons/core/generator/: demographics.py  geonames.py
champyons/core/i18n/: context.py  formatting.py  translation.py
champyons/core/repositories/: base.py  continent.py  nation.py  region.py  translations.py
champyons/core/services/: continent_service.py  nation_service.py  region_service.py
champyons/core/timezone/: __init__.py  api.py
champyons/data/cultures/: world.json
champyons/db/mixins/: active.py  geography.py
champyons/db/models/: city.py  continent.py  local_region.py  nation.py  person.py  region.py  translation.py
champyons/db/types/: datetime.py  lists.py
champyons/locales/: messages.pot
champyons/repositories/sqlalchemy/: continent_repository.py  nation_repository.py  region_repository.py  translation_repostory.py
champyons/schemas/: continent.py  nation.py  person.py  region.py  user.py
tests/core/generator/: test_geonames.py
tests/core/services/: conftest.py  test_continent_service.py  test_nation_service.py  test_region_service.py
tests/repositories/sqlalchemy/: conftest.py  test_nation_repository.py
(+111 files in other folders)
